Fix BM Modal popup styles (#2259)
* updated modal popup styles

* remvoed scrollbar; fixed styles

--- a/src/components/templates/ExternalRoom/ExternalRoom.scss
+++ b/src/components/templates/ExternalRoom/ExternalRoom.scss
@@ -76,7 +76,6 @@ $text-width: 50rem;
   }
 
   &__venue-description {
-    @include scrollbar;
     padding: $spacing--sm $spacing;
 
     background: $dark;
